Changes for Padre-Plugin-Moose

0.16  to be released
	- Removing the static box sizers from the design for a cleaner look
	- Added missing $VERSION to ClassMember

0.15  2012.2.29 (AZAWAWI)
	- Add Moose keywords highlighting
	- Add YAML-based TextMate-style Moose keyword snippet
	  completion (Thanks for El_Che and perigrin)
	- Added basic constructor/destructor support
	- Switch order of members tab to be most used first: attributes,
	  methods, subtypes, constructor and then destructor.
	- Inspector is now bigger since it is a scrolled window.
	- Fix q{editable inspector in Program node at startup} TODO
	- Dialog is no longer cramped (width is 750 instead of 640 pixels)

0.14  2012.2.27 (AZAWAWI)
	- Added MooseX::Declare code generation
	- Code generation options UI
	- Minimum dialog size is 640x480 and it is now resizable (bowtie++)
	- Ability to change generation code target (Moose, Mouse or MooseX::Declare) via a combo box
	- Fixed immutable/namespace::clean order (GabrielVieira++ for the bug report)
	- Perl tidy + Makefile.PL now includes plugin homepage as wiki page (bowtie++)

0.13  2012.2.27 (AZAWAWI)
	- Add Mouse support
	- Added method modifiers list completion
	- Added support for class attributes via MooseX::ClassAttribute
	- Added support for singletons via MooseX::Singleton
	- Inspector is now a scrolled window
	- Added to attributes the following options: coerce, does, weak_ref, 
	  lazy, builder, default, clearer, predicate, documentation.

0.12  2012.2.26 (AZAWAWI)
	- Delete key and right-click (context menu) now work on the delete option. 
	  No actual deletion is done at the moment
	- Add the UI/event hooks for constructor/destructor buttons.
	  No code generation at the moment
	- Choice combo list is now in inspector. (bowtie++ for the idea)

0.11  2012.2.24 (AZAWAWI)
	- New polished dialog UI :)
	- Added method modifiers (around, before, after)
	- Removed About button and moved its information to the dialog title

0.10  2012.2.24 (AZAWAWI)