@@ -3,6 +3,7 @@ Changes for Padre-Plugin-Moose
 0.16  to be released
 	- Removing the static box sizers from the design for a cleaner look
 	- Added missing $VERSION to ClassMember
+	- Completed plugin dependencies
 
 0.15  2012.2.29 (AZAWAWI)
 	- Add Moose keywords highlighting
